--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,22 @@
+@import url('https://fonts.googleapis.com/css?family=Anton|Oswald|Staatliches');
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    margin: 0;
+    padding: 0;
+    font-size: 24px;
+    font-family: Staatliches, sans-serif;
+    background-color: rgba(232, 93, 117, 1);
+    color: rgba(205, 237, 246, 1);
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+#root {
+    margin: 1rem;
 }
+/*
+$color1: rgba(53, 82, 74, 1); // dark green
+$color2: rgba(55, 255, 139, 1); // bright green
+$color3: rgba(247, 240, 82, 1); // yellow
+$color4: rgba(205, 237, 246, 1); // light grey
+$color5: rgba(232, 93, 117, 1); // pink */
